--- a/index.html
+++ b/index.html
@@ -1,66 +1,32 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Landing Page</title>
-<!-- <meta charset="utf-8">
-<meta name="viewport" content="width=device-width,intial-scale=1"> -->
-<link href="https://fonts.googleapis.com/css?family=Beth+Ellen&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-
-
-
-<link rel="stylesheet" type="text/css" href="style.css">
-
-
+	<title>RoboPage</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
+	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 </head>
 <body>
+	<h1>Robot Friend</h1>
+	<div class="robots">
 
-
-
-
-
-
-
-<div id="div1">
-<nav class="nav">
-
-	<a class="nav-link active"href="index.html">Kyngaa</a>
-	<a class="nav-link"href="index.html#div2">About</a>
-	<a class="nav-link"href="index.html#div3">Portfolio</a>
-</nav>
-	
-	<div class="box">
+		<div class="android"> 
 		
-	<div class="innerbox">
-		
-	<a href="index.html#div2"><button type="button" class="btn btn-outline-danger">Find out more</button></a>
-	</div></div>
-
-
-
-</div>
-
-<div id="div2">
-<div class="box">
-
-<iframe scrolling="no" frameborder="yes" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/421461579&color=%23dcb4cc&auto_play=true&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
-
-<iframe scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/users/83534020&color=%23f6f5f6&auto_play=true&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe>
-
+			<div class="head"> 
+				<div class="eyes"> 
+					<div class="left_eye"></div> 
+					<div class="right_eye"></div>
+				</div> 
+			</div> 
+			<div class="upper_body"> 
+				<div class="left_arm"></div> 
+				<div class="torso"></div> 
+				<div class="right_arm"></div> 
+			</div> 
+			<div class="lower_body"> 
+				<div class="left_leg"></div> 
+				<div class="right_leg"></div> 
+			</div> 
+		</div>
 	</div>
-</div>
-
-
-<div id="div3">
-	
-</div>
-
-
-
-
-	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </body>
 </html>
