--- a/Exercise 2/index.html
+++ b/Exercise 2/index.html
@@ -2,8 +2,8 @@
 <html>
 <head>
 	<title>Landing Page</title>
-<!-- <meta charset="utf-8">
-<meta name="viewport" content="width=device-width,intial-scale=1"> -->
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width,intial-scale=1">
 <link href="https://fonts.googleapis.com/css?family=Beth+Ellen&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
@@ -43,9 +43,9 @@
 <div id="div2">
 <div class="box">
 
-<iframe scrolling="no" frameborder="yes" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/421461579&color=%23dcb4cc&auto_play=true&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
+<iframe scrolling="no" frameborder="yes"  src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/421461579&color=%23dcb4cc&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
 
-<iframe scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/users/83534020&color=%23f6f5f6&auto_play=true&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe>
+<iframe scrolling="yes" frameborder="yes" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/users/83534020&color=%23f6f5f6&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe>
 
 	</div>
 </div>
