--- a/Exercise 2/index.html
+++ b/Exercise 2/index.html
@@ -30,6 +30,7 @@
 </nav>
 	
 	<div class="box">
+		<h1>Welcome to the Wonderfull World</h1>
 		
 	<div class="innerbox">
 		
@@ -53,6 +54,13 @@
 
 <div id="div3">
 	
+	<div class="box box2">
+		<h1>Who am I ?</h1>
+		
+	</div>
+
+<a href="index.html#div2"><button type="button" class="btn btn-outline-danger">Find out more</button></a>
+	</div></div>
 </div>
 
 
