--- a/Exercise 2/index.html
+++ b/Exercise 2/index.html
@@ -40,12 +40,13 @@
 
 
 </div>
-
+<h2 style="text-align: center">Songs</h2>
 <div id="div2">
+	
 <div class="box">
 
 <iframe scrolling="no" frameborder="yes"  src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/421461579&color=%23dcb4cc&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
-
+<br>
 <iframe scrolling="yes" frameborder="yes" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/users/83534020&color=%23f6f5f6&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe>
 
 	</div>
@@ -56,7 +57,7 @@
 	
 	<div class="box box2">
 		<h1>Who am I ?</h1>
-		
+
 	</div>
 
 <a href="index.html#div2"><button type="button" class="btn btn-outline-danger">Find out more</button></a>
