--- a/Exercise 2/index.html
+++ b/Exercise 2/index.html
@@ -5,6 +5,10 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width,intial-scale=1">
 <link href="https://fonts.googleapis.com/css?family=Beth+Ellen&display=swap" rel="stylesheet">
+
+
+
+
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
 
@@ -18,29 +22,46 @@
 
 
 
-
-
-
 <div id="div1">
-<nav class="nav">
 
+            
+<nav class="nav">
+	
 	<a class="nav-link active"href="index.html">Kyngaa</a>
 	<a class="nav-link"href="index.html#div2">About</a>
 	<a class="nav-link"href="index.html#div3">Portfolio</a>
 </nav>
-	
+	    
 	<div class="box">
 		<h1>Welcome to the Wonderfull World</h1>
 		
 	<div class="innerbox">
 		
-	<a href="index.html#div2"><button type="button" class="btn btn-outline-danger">Find out more</button></a>
+
+<div id="mc_embed_signup">
+<form action="https://gmail.us3.list-manage.com/subscribe/post?u=2187edeb5a4a1f0b600fdb3e5&amp;id=fb1cf4578e" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+    <div id="mc_embed_signup_scroll">
+	
+	
+    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+  <!--   <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_2187edeb5a4a1f0b600fdb3e5_fb1cf4578e" tabindex="-1" value=""></div> -->
+    <div class="clear"><input class="btn btn-outline-danger" type="submit" value="Find out more" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+    </div>
+</form>
+</div>
+
+<!--End mc_embed_signup-->
+
+
+
+
+
+<!-- 
+	<button type="button" class="btn btn-outline-danger">Find out more</button> -->
 	</div></div>
 
-
-
 </div>
-<h2 style="text-align: center">Songs</h2>
+<h2 id="abc"style="text-align: center">Songs</h2>
 <div id="div2">
 	
 <div class="box">
